2005-07-21  Chris Taylor  <chris@icculus.org>

	* d2x.xcode/project.pbxproj: make file paths relative to project,
	add some files (so it builds), warnings are not errors
	(ubyte *, sbyte * mismatches found when using gcc 4.0)

2005-07-03  Chris Taylor  <chris@icculus.org>

	* include/ui.h, ui/file.c, ui/inputbox.c: add ui_inputbox_set_text

	* include/ui.h, main/editor/centers.c, main/editor/medrobot.c,
	main/editor/medwall.c, ui/radio.c: add ui_radio_set_value,
	draw an "O" in the current radio button

2005-07-01  Chris Taylor  <chris@icculus.org>

	* include/ui.h, main/editor/centers.c, main/editor/eswitch.c,
	main/editor/medwall.c, ui/checkbox.c: add ui_checkbox_check

2005-06-23  Chris Taylor  <chris@icculus.org>

	* installation.txt: describe new directory system
	and mention recursive mission searching

2005-06-22  Chris Taylor  <chris@icculus.org>

	* main/editor/kgame.c: load .rl2 files instead of .lvl files
	(some editor info could be stored in .rdl / .rl2 files)

	* include/nocfile.h, main/cntrlcen.c, main/cntrlcen.h,
	main/fuelcen.c, main/fuelcen.h, main/game.c, main/game.h,
	main/segment.c, main/segment.h, main/switch.c, main/switch.h,
	main/wall.c, main/wall.h: add level component saving functions,
	which use PhysicsFS and are endian friendly

	* main/editor/mine.c, main/gamemine.c, main/gamemine.h:
	add function for converting descent 2 texture numbers back to
	descent 1 texture numbers

	* main/editor/mine.c, main/gamesave.c: use PhysicsFS for saving
	levels. Entirely endian friendly and allows saving of .rdl and .rl2
	files.

2005-06-14  Chris Taylor  <chris@icculus.org>

	* main/mission.c: make sure there is a path to free for D2 Demo/OEM

2005-06-13  Chris Taylor  <chris@icculus.org>

	* main/gamemine.c: convert_d1_tmap_num now returns 193 for texture
	number 198 to maintain bijectivity, when descent.pig is available
	(used to return 167, which is also returned for Descent 1 texture
	132)

	* include/physfsx.h: added PHYSFSX_writeVector,