@@ -1,4 +1,4 @@
-/* $Id: ipx_mcast4.c,v 1.2 2003-12-08 22:55:27 btb Exp $ */
+/* $Id: ipx_mcast4.c,v 1.3 2005-07-21 09:34:22 chris Exp $ */
 
 /*
  *
@@ -189,7 +189,7 @@ static int ipx_mcast4_ReceivePacket(ipx_socket_t *sk, char *outbuf, int outbufsi
 {
 	int size;
 	struct sockaddr_in fromaddr;
-	int fromaddrsize = sizeof(fromaddr);
+	uint fromaddrsize = sizeof(fromaddr);
 
 	if((size = recvfrom(sk->fd, outbuf, outbufsize, 0, (struct sockaddr*)&fromaddr, &fromaddrsize)) < 0)
 		return -1;
